--- a/callAPI_in_weatherApp/index.html
+++ b/callAPI_in_weatherApp/index.html
@@ -1,53 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="">
-    <link
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Weather App</title>
+
+		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
 			integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
 			crossorigin="anonymous"
 			referrerpolicy="no-referrer"
 		/>
-</head>
-<body>
-    <div class="weather">
-        <input type="text" class = "searchCity">
-        <div class="content">
-            <h1 class="cappital">
-                <span class="city">Hanoi</span>
-                <span>,</span>
-                <span class="country">VN</span>
-            </h1>
+		<link rel="stylesheet" href="./style.css" />
+	</head>
+	<body>
+		<div id="weather">
+			<input type="text" placeholder="Search..." class="input-search" />
+			<div class="content">
+				<h1 class="name">
+					<span class="city"></span>
+					<span>,</span>
+					<span class="country"></span>
+				</h1>
+				<p class="time"></p>
+				<div class="temperature">
+					<span class="value"></span>
+					<span><sup>o</sup>C</span>
+				</div>
+				<div class="short-desc"></div>
+				<div class="more-desc">
+					<div class="visibility">
+						<i class="far fa-eye"></i>
+						<span></span>
+					</div>
+					<div class="wind">
+						<i class="fas fa-wind"></i>
+						<span></span>
+					</div>
+					<div class="cloud">
+						<i class="fas fa-cloud-sun"></i>
+						<span></span>
+					</div>
+				</div>
+			</div>
+		</div>
 
-            <div class="time">22:06:58  2/11/2023</div>
-
-            <div class="temperature">
-                <span class = "value">23<sup>o</sup>C</span>
-            </div>
-
-            <div class="short-desc">Clouds</div>
-            <div class="more-desc">
-                <div class="visibility">
-                    <i class="far fa-eye"></i>
-                    <span>1000m</span>
-                </div>
-
-                <div class="wind">
-                    <i class="fas fa-wind"></i>
-                    <span>1000m</span>
-                </div>
-
-                <div class="cloud">
-                    <i class="fas fa-cloud-sun"></i>
-                    <span>1000m</span>
-                </div>
-            </div>
-        </div>
-    </div>
-</body>
+		<script src="./main.js"></script>
+	</body>
 </html>
